--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -1,7 +1,9 @@
 @import url('./normalize.css');
 
-body {
+* {
+  margin: 0;
   padding: 0;
+  box-sizing: border-box;
   font-family: 'PingFang SC', sans-serif;
 }
 
